##################################################################
#
# Round for C
#
# Copyright (C) Satoshi Konno 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

SUBDIRS = include lib bin

if ROUND_ENABLE_TESTS
SUBDIRS += tests
endif
