##################################################################
#
# Round for C
#
# Copyright (C) Satoshi Konno 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

round_client_headers = \
	./round/finder.h \
	./round/node.h \
	./round/const.h \
	./round/util/json_rpc.h \
	./round/util/json.h \
	./round/util/option.h \
	./round/cluster.h \
	./round/round.h \
	./round/client.h \
	./round/server.h \
	./round/typedef.h \
	./round/error.h

nobase_include_HEADERS = \
	$(round_client_headers)
