##################################################################
#
# Round for C
#
# Copyright (C) Satoshi Konno 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

round_client_headers = \
	./round/const.h \
	./round/server.h \
	./round/round.h \
	./round/node.h \
	./round/client.h \
	./round/script.h \
	./round/cluster.h \
	./round/typedef.h \
	./round/error.h \
	./round/util/json.h \
	./round/util/json_rpc.h \
	./round/util/option.h \
	./round/finder.h

nobase_include_HEADERS = \
	$(round_client_headers)
