##################################################################
#
# Round for C
#
# Copyright (C) Satoshi Konno 2015
#
# This is licensed under BSD-style license, see file COPYING.
#
##################################################################

round_client_headers = \
	./round/cluster.h \
	./round/round.h \
	./round/const.h \
	./round/script.h \
	./round/server.h \
	./round/finder.h \
	./round/node.h \
	./round/error.h \
	./round/client.h \
	./round/util/json.h \
	./round/util/option.h \
	./round/util/json_rpc.h \
	./round/route.h \
	./round/typedef.h

nobase_include_HEADERS = \
	$(round_client_headers)
